--- a/LabProject/pom.xml
+++ b/LabProject/pom.xml
@@ -18,6 +18,11 @@
         <dependency>  
             <groupId>org.springframework.boot</groupId>  
             <artifactId>spring-boot-starter-web</artifactId>  
-        </dependency>  
+        </dependency>
+        <dependency>
+            <groupId>org.opensky</groupId>
+            <artifactId>opensky-api</artifactId>
+            <version>1.3.0</version>
+        </dependency>
     </dependencies>   
 </project>
