--- a/LabProject/pom.xml
+++ b/LabProject/pom.xml
@@ -4,10 +4,11 @@
     <groupId>com.UA.IES.LabProject</groupId>
     <artifactId>LabProject</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>  
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
     <parent>  
         <groupId>org.springframework.boot</groupId>  
